Replaced asciidoc macros for guibutton and guilabel with a custom backend